--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -74,7 +74,7 @@
     gap: 2rem;
     margin-bottom: 4rem;
     padding-bottom: 2rem;
-    border-bottom: 1px solid #eee;
+    /*border-bottom: 1px solid #eee;*/
     align-items: flex-start;
   }
 
