--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -72,8 +72,10 @@
   .member-bio-container {
     display: flex;
     gap: 2rem;
-    margin-bottom: 4rem;
-    padding-bottom: 2rem;
+    /*margin-bottom: 4rem;*/
+    /*padding-bottom: 2rem;*/
+      margin-bottom: 2rem; /* Reduced from 4rem */
+    padding-bottom: 0;   /* Reduced from 2rem */
     /*border-bottom: 1px solid #eee;*/
     align-items: flex-start;
   }
