--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -45,7 +45,7 @@
       <div class="member-details">
         <span class="member-role">
             {% if type.icon %}<i class="{{ type.icon }}"></i> {% endif %}
-            {{ member.description | capitalize }}
+            {{ member.description }}
         </span>
 
         {% if member.affiliation %}
