--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -61,7 +61,12 @@
 
   <div class="member-biography">
     {% if member.content %}
+      {% comment %}
       {{ member.content | markdownify }}
+      {% endcomment %}
+<p style="text-align: left; line-height: 1.6; margin-top: 0.5rem; color: #4a4a4a;">
+{{ imember.content | markdownify | remove: "<p>" | remove: "</p>" }}
+</p>
     {% elsif member.description %}
       {{ member.description | markdownify }}
     {% else %}
