--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -65,7 +65,7 @@
       {{ member.content | markdownify }}
       {% endcomment %}
 <p style="text-align: left; line-height: 1.6; margin-top: 0.5rem; color: #4a4a4a;">
-{{ imember.content | markdownify | remove: "<p>" | remove: "</p>" }}
+{{ member.content | markdownify | remove: "<p>" | remove: "</p>" }}
 </p>
     {% elsif member.description %}
       {{ member.description | markdownify }}
