--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -16,9 +16,6 @@
     {% if member.image %}
       {% if page.slug != member.slug %}
 <a href="{% if member.homepage %}{{ member.homepage }}{% else %}{{ member.url | relative_url | uri_escape }}{% endif %}" aria-label="{{ member.name }}">
-      {% comment %}
-        <a href="{{ member.url | relative_url | uri_escape }}" aria-label="{{ member.name }}">
-      {% endcomment %}
       {% endif %}
 
         <img
@@ -34,7 +31,8 @@
 
     {% if member.name %}
       {% if page.slug != member.slug %}
-        <a href="{{ member.url | relative_url | uri_escape }}" class="member-link">
+<a href="{% if member.homepage %}{{ member.homepage }}{% else %}{{ member.url | relative_url | uri_escape }}{% endif %}" class="member-link">
+
       {% endif %}
 
         <h3 class="member-name">{{ member.name }}</h3>
