--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -84,8 +84,8 @@
   .member-bio-container {
     display: flex;
     gap: 2rem;
-    margin-bottom: 2rem;
-    padding-bottom: 0;
+    margin-bottom: 3rem;
+    padding-bottom: 1rem;
     align-items: flex-start;
   }
 
