--- a/_includes/member-bio.html
+++ b/_includes/member-bio.html
@@ -119,6 +119,7 @@
     margin-bottom: 0.25rem;
     font-size: 1.25rem;
     font-weight: 700;
+      text-align: center;
   }
 
   /* Link Styles */
